# project_data_prf_gov

./: .env.template  .gitignore  docker-compose.yml  main.py  pyproject.toml
notebooks/: csv_to_sql2.ipynb  eda.ipynb
script/: csvs_to_sql.py  download_csv.py  download_csvs.py
